--- a/scripts/vs-corelationplot.rmd
+++ b/scripts/vs-corelationplot.rmd
@@ -1,6 +1,7 @@
 ---
 title: "Corelation"
 output:
+  pdf_document: default
   html_document:
     df_print: paged
 ---
@@ -144,7 +145,7 @@ for (i in 1:nrow(Corelation_DF)) {
   } else if (Corelation_DF$SR[i] == "20-30%") {
     Corelation_DF$SR[i] = 0
   } else if (Corelation_DF$SR[i] == "30-50%") {
-    Corelation_DF$SR[i] = 1
+    Corelation_DF$SR[i] = 0
   } else if (Corelation_DF$SR[i] == "50-75%") {
     Corelation_DF$SR[i] = 1
   } else if (Corelation_DF$SR[i] == "75-90%") {
@@ -313,66 +314,66 @@ write.csv(Corelation_DF,
 
 ```{r, echo=FALSE}
 # Defines function to color according to correlation
-cor_func <- function(data, mapping, method, symbol, ...) {
-  x <- eval_data_col(data, mapping$x)
-  y <- eval_data_col(data, mapping$y)
-  
-  corr <- cor(x, y, method = method, use = 'complete.obs')
-  colFn <- colorRampPalette(c("brown1", "white", "dodgerblue"),
-                            interpolate = 'spline')
-  fill <- colFn(100)[findInterval(corr, seq(-1, 1, length = 100))]
-  
-  ggally_text(
-    label = paste(symbol, as.character(round(corr, 2))),
-    mapping = aes(),
-    xP = 0.5,
-    yP = 0.5,
-    color = 'black',
-    size = 2.75,
-    ...
-  ) +
-    theme(panel.background = element_rect(fill = fill))
-}
-
-pm <- ggpairs(
-  Corelation_DF,
-  upper = list(continuous = wrap(
-    cor_func,
-    # method = 'spearman', symbol = expression('\u03C1 ='))),
-    method = 'spearman', symbol = expression('')
-  )),
-  
-  lower = list(
-    continuous = function(data, mapping, ...) {
-      ggally_smooth_lm(data = data, mapping = mapping) +
-        theme(panel.background = element_blank())
-    }
-  ),
-  diag = list(
-    continuous = function(data, mapping, ...) {
-      ggally_densityDiag(data = data, mapping = mapping) +
-        theme(panel.background = element_blank())
-    }
-  )
-)
-
-mytheme = theme(
-  strip.background = element_rect(fill = "white"),
-  panel.grid.major = element_blank(),
-  panel.grid.minor = element_blank()
-)
-
-
-Cor_plot <- pm + mytheme
-filename <- "Corelation_Proposals.pdf"
-full_path <- file.path(plot_dir, filename)
-ggsave(
-  full_path,
-  Cor_plot,
-  width = 11,
-  height = 11,
-  units = "in"
-)
+# cor_func <- function(data, mapping, method, symbol, ...) {
+#   x <- eval_data_col(data, mapping$x)
+#   y <- eval_data_col(data, mapping$y)
+#   
+#   corr <- cor(x, y, method = method, use = 'complete.obs')
+#   colFn <- colorRampPalette(c("brown1", "white", "dodgerblue"),
+#                             interpolate = 'spline')
+#   fill <- colFn(100)[findInterval(corr, seq(-1, 1, length = 100))]
+#   
+#   ggally_text(
+#     label = paste(symbol, as.character(round(corr, 2))),
+#     mapping = aes(),
+#     xP = 0.5,
+#     yP = 0.5,
+#     color = 'black',
+#     size = 2.75,
+#     ...
+#   ) +
+#     theme(panel.background = element_rect(fill = fill))
+# }
+# 
+# pm <- ggpairs(
+#   Corelation_DF,
+#   upper = list(continuous = wrap(
+#     cor_func,
+#     # method = 'spearman', symbol = expression('\u03C1 ='))),
+#     method = 'spearman', symbol = expression('')
+#   )),
+#   
+#   lower = list(
+#     continuous = function(data, mapping, ...) {
+#       ggally_smooth_lm(data = data, mapping = mapping) +
+#         theme(panel.background = element_blank())
+#     }
+#   ),
+#   diag = list(
+#     continuous = function(data, mapping, ...) {
+#       ggally_densityDiag(data = data, mapping = mapping) +
+#         theme(panel.background = element_blank())
+#     }
+#   )
+# )
+# 
+# mytheme = theme(
+#   strip.background = element_rect(fill = "white"),
+#   panel.grid.major = element_blank(),
+#   panel.grid.minor = element_blank()
+# )
+# 
+# 
+# Cor_plot <- pm + mytheme
+# filename <- "Corelation_Proposals.pdf"
+# full_path <- file.path(plot_dir, filename)
+# ggsave(
+#   full_path,
+#   Cor_plot,
+#   width = 11,
+#   height = 11,
+#   units = "in"
+# )
 ```
 
 ```{r}
@@ -413,436 +414,436 @@ corrplot(
 
 
 
-```{r,echo=FALSE}
+<!-- ```{r,echo=FALSE} -->
 
-# Raw_Data <-Raw_Data[,c(4,52:58, 63,68,69)]
-# Raw_Data <-Raw_Data[complete.cases(Raw_Data),]
-Corelation_DF_Conf<-data.frame(Corelation_DF[,c(1:16)], Raw_Data[,c(4,52:58, 63,68,69)])
-Corelation_DF_Conf<-Corelation_DF_Conf[complete.cases(Corelation_DF_Conf),]
+<!-- # Raw_Data <-Raw_Data[,c(4,52:58, 63,68,69)] -->
+<!-- # Raw_Data <-Raw_Data[complete.cases(Raw_Data),] -->
+<!-- Corelation_DF_Conf<-data.frame(Corelation_DF[,c(1:16)], Raw_Data[,c(4,52:58, 63,68,69)]) -->
+<!-- Corelation_DF_Conf<-Corelation_DF_Conf[complete.cases(Corelation_DF_Conf),] -->
 
-Corelation_DF_Conf<-Corelation_DF_Conf  %>%  dplyr::rename(
-                                           NCP="wha_average_number",
-                                           CR="core_rank",                         ## Research Style
-                                           SR="if_you_submit_manuscripts",    ## Typical week working hours
-                                           ACP="far_in_advance_do_you",              ## Typical week Research
-                                           AR="length_of_supp",     ## Break Frequency
-                                           DWH="in_the_week_leading_to_a_c",      ## Email respnse style
-                                           DWR="research",
-                                           DDR="research1",
-                                           T="you_typically_subm",     ## Submit Proposal
-                                           DS="ss_level_in_a_fundi"     ## Stress leven on Proposal Deadline
-                                           )
-```
-
-
-
-```{r,echo=FALSE}
-for (i in 1:nrow(Corelation_DF_Conf)){
-   if (Corelation_DF_Conf$NCP[i]=="1-2"){
-    Corelation_DF_Conf$NCP[i]=1
-  } else if (Corelation_DF_Conf$NCP[i]=="3-4"){
-    Corelation_DF_Conf$NCP[i]=2
-  } else if (Corelation_DF_Conf$NCP[i]=="5-6"){
-    Corelation_DF_Conf$NCP[i]=3
-  } else if (Corelation_DF_Conf$NCP[i]=="7-9"){
-    Corelation_DF_Conf$NCP[i]=3
-  } else {
-    Corelation_DF_Conf$NCP[i]=3
-  }
-  
-  
-  if (Corelation_DF_Conf$CR[i]=="C"){
-    Corelation_DF_Conf$CR[i]=1
-  } else if (Corelation_DF_Conf$CR[i]=="B"){
-    Corelation_DF_Conf$CR[i]=2
-  }  else if (Corelation_DF_Conf$CR[i]=="A"){
-    Corelation_DF_Conf$CR[i]=3
-  } else {
-    Corelation_DF_Conf$CR[i]=3
-  }
-  
-  if (Corelation_DF_Conf$SR[i]=="< 10%"){
-    Corelation_DF_Conf$SR[i]=0
-  } else if (Corelation_DF_Conf$SR[i]=="10-20%"){
-    Corelation_DF_Conf$SR[i]=0
-  } else if (Corelation_DF_Conf$SR[i]=="20-30%"){
-    Corelation_DF_Conf$SR[i]=0
-  } else if (Corelation_DF_Conf$SR[i]=="30-50%"){
-    Corelation_DF_Conf$SR[i]=0
-  } else if (Corelation_DF_Conf$SR[i]=="50-75%"){
-    Corelation_DF_Conf$SR[i]=1
-  } else if (Corelation_DF_Conf$SR[i]=="75-90%"){
-    Corelation_DF_Conf$SR[i]=1
-  } else{
-    Corelation_DF_Conf$SR[i]=1
-  }
-  
-  if (Corelation_DF_Conf$ACP[i]=="< 1 week"){
-    Corelation_DF_Conf$ACP[i]=1
-  } else if (Corelation_DF_Conf$ACP[i]=="1-2 weeks"){
-    Corelation_DF_Conf$ACP[i]=1
-  } else if (Corelation_DF_Conf$ACP[i]=="2-4 weeks"){
-    Corelation_DF_Conf$ACP[i]=1
-  } else if (Corelation_DF_Conf$ACP[i]=="1-2 months"){
-    Corelation_DF_Conf$ACP[i]=2
-  } else {
-    Corelation_DF_Conf$ACP[i]=3
-  }
-  
-  if (Corelation_DF_Conf$AR[i]=="< 1 month"){
-    Corelation_DF_Conf$AR[i]=1
-  } else if(Corelation_DF_Conf$AR[i]=="1-3 months"){
-    Corelation_DF_Conf$AR[i]=1
-  } else if(Corelation_DF_Conf$AR[i]=="3-6 months"){
-    Corelation_DF_Conf$AR[i]=1
-  } else if(Corelation_DF_Conf$AR[i]=="6-12 months"){
-    Corelation_DF_Conf$AR[i]=2
-  } else if(Corelation_DF_Conf$AR[i]==""){
-    Corelation_DF_Conf$AR[i]=NA
-  } else {
-    Corelation_DF_Conf$AR[i]=3
-  }
-  
-  
-  if (Corelation_DF_Conf$DWH[i]=="Significantly less"){
-    Corelation_DF_Conf$DWH[i]=1
-  } else if (Corelation_DF_Conf$DWH[i]=="Less"){
-    Corelation_DF_Conf$DWH[i]=1
-  } else if (Corelation_DF_Conf$DWH[i]=="About the same"){
-    Corelation_DF_Conf$DWH[i]=1
-  } else if (Corelation_DF_Conf$DWH[i]=="More"){
-    Corelation_DF_Conf$DWH[i]=2
-  } else if (Corelation_DF_Conf$DWH[i]==""){
-    Corelation_DF_Conf$DWH[i]=NA
-  } else {
-    Corelation_DF_Conf$DWH[i]=3
-  }
-  
-  
-  if (Corelation_DF_Conf$T[i]=="Minutes before deadline"){
-    Corelation_DF_Conf$T[i]= 1
-  } else if (Corelation_DF_Conf$T[i]=="1-3 hours before deadline"){
-    Corelation_DF_Conf$T[i]=2
-  } else if (Corelation_DF_Conf$T[i]=="3-6 hours before deadline"){
-    Corelation_DF_Conf$T[i]=3
-  } else if (Corelation_DF_Conf$T[i]=="1 day before deadline"){
-    Corelation_DF_Conf$T[i]=4
-  } else if (Corelation_DF_Conf$T[i]==""){
-    Corelation_DF_Conf$T[i]=NA
-  } else {
-    Corelation_DF_Conf$T[i]=5
-  }
-  
-  
-  if (Corelation_DF_Conf$DS[i]=="Extremely less"){
-    Corelation_DF_Conf$DS[i]=1
-  } else if (Corelation_DF_Conf$DS[i]=="Significantly less"){
-    Corelation_DF_Conf$DS[i]=1
-  } else if (Corelation_DF_Conf$DS[i]=="Same"){
-    Corelation_DF_Conf$DS[i]=1
-  } else if (Corelation_DF_Conf$DS[i]=="Significantly  more"){
-    Corelation_DF_Conf$DS[i]=2
-  } else if (Corelation_DF_Conf$DS[i]=="Extremely  more"){
-    Corelation_DF_Conf$DS[i]=3
-  } else {
-    Corelation_DF_Conf$DS[i]=NA
-  }
-}
-
-
-# colnames(Corelation_DF_Conf)
-
-cols.num <- c("NCP", "CR", "SR", "ACP", "AR", "DWH", "DWR", "DDR", "T", "DS")
-Corelation_DF_Conf[cols.num] <- sapply(Corelation_DF_Conf[cols.num],as.numeric)
-
-Conf_C_Eng<-Corelation_DF_Conf
-Conf_A_Astar<-Corelation_DF_Conf
-Conf_B_C<-Corelation_DF_Conf
-
-Corelation_DF_Conf$departmental_affiliation<-NULL
-```
-
-```{r, echo=FALSE}
-file_name = 'CorrelationData_conf_SR2.csv'
-write.csv(Corelation_DF_Conf,
-          file.path(curated_data_dir, file_name),
-          row.names = FALSE)
-```
-
-
-```{r,echo=FALSE}
-# 
-# # Defines function to color according to correlation
-# cor_func <- function(data, mapping, method, symbol, ...) {
-#   x <- eval_data_col(data, mapping$x)
-#   y <- eval_data_col(data, mapping$y)
-#   corr <- cor(x, y, method = method, use = 'complete.obs')
-#   colFn <- colorRampPalette(c("brown1", "white", "dodgerblue"),
-#                             interpolate = 'spline')
-#   fill <- colFn(100)[findInterval(corr, seq(-1, 1, length = 100))]
-#   
-#   ggally_text(
-#     label = paste(symbol, as.character(round(corr, 2))),
-#     mapping = aes(),
-#     xP = 0.5,
-#     yP = 0.5,
-#     color = 'black',
-#     size = 2.75,
-#     ...
-#   ) +
-#     theme(panel.background = element_rect(fill = fill))
-# }
-# 
-# pm <- ggpairs(
-#   Corelation_DF_Conf,
-#   upper = list(continuous = wrap(
-#     cor_func,
-#     # method = 'spearman', symbol = expression('\u03C1 ='))),
-#     method = 'spearman', symbol = expression('')
-#   )),
-#   
-#   lower = list(
-#     continuous = function(data, mapping, ...) {
-#       ggally_smooth_lm(data = data, mapping = mapping) +
-#         theme(panel.background = element_blank())
-#     }
-#   ),
-#   diag = list(
-#     continuous = function(data, mapping, ...) {
-#       ggally_densityDiag(data = data, mapping = mapping) +
-#         theme(panel.background = element_blank())
-#     }
-#   )
-# )
-# 
-# mytheme = theme(
-#   strip.background = element_rect(fill = "white"),
-#   panel.grid.major = element_blank(),
-#   panel.grid.minor = element_blank()
-# )
-# 
-# 
-# Cor_plot<-pm + mytheme
-# 
-#       filename<-"Conf_Corelation.pdf"
-#       full_path<-file.path(plot_dir, filename)
-#       ggsave(full_path, Cor_plot, width = 11, height = 11, units = "in")
-```
+<!-- Corelation_DF_Conf<-Corelation_DF_Conf  %>%  dplyr::rename( -->
+<!--                                            NCP="wha_average_number", -->
+<!--                                            CR="core_rank",                         ## Research Style -->
+<!--                                            SR="if_you_submit_manuscripts",    ## Typical week working hours -->
+<!--                                            ACP="far_in_advance_do_you",              ## Typical week Research -->
+<!--                                            AR="length_of_supp",     ## Break Frequency -->
+<!--                                            DWH="in_the_week_leading_to_a_c",      ## Email respnse style -->
+<!--                                            DWR="research", -->
+<!--                                            DDR="research1", -->
+<!--                                            T="you_typically_subm",     ## Submit Proposal -->
+<!--                                            DS="ss_level_in_a_fundi"     ## Stress leven on Proposal Deadline -->
+<!--                                            ) -->
+<!-- ``` -->
 
 
 
-```{r,echo=FALSE}
-library(corrplot)
-M_Conf <- cor(Corelation_DF_Conf[, c(2:26)], use = "complete.obs")
-res2 <- cor.mtest(Corelation_DF_Conf[, c(2:26)], conf.level = .95)
-
-corrplot(
-  M_Conf,
-  p.mat = res2$p,
-  method = "color",
-  type = "upper",
-  # title = "Psychometrics-core questions correlation on conference papers",
-  title = "Psychometrics-core questions correlation on conference papers",
-  sig.level = c(.001, .01, .05),
-  pch.cex = .9,
-  diag = FALSE,
-  insig = "label_sig",
-  pch.col = "black",
-  col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200),
-  tl.col = "black",
-  mar = c(0, 0, 1, 0)
-)
-
-```
+<!-- ```{r,echo=FALSE} -->
+<!-- for (i in 1:nrow(Corelation_DF_Conf)){ -->
+<!--    if (Corelation_DF_Conf$NCP[i]=="1-2"){ -->
+<!--     Corelation_DF_Conf$NCP[i]=1 -->
+<!--   } else if (Corelation_DF_Conf$NCP[i]=="3-4"){ -->
+<!--     Corelation_DF_Conf$NCP[i]=2 -->
+<!--   } else if (Corelation_DF_Conf$NCP[i]=="5-6"){ -->
+<!--     Corelation_DF_Conf$NCP[i]=3 -->
+<!--   } else if (Corelation_DF_Conf$NCP[i]=="7-9"){ -->
+<!--     Corelation_DF_Conf$NCP[i]=3 -->
+<!--   } else { -->
+<!--     Corelation_DF_Conf$NCP[i]=3 -->
+<!--   } -->
 
 
-```{r, echo=FALSE}
-Conf_C_Eng <-
-  subset(
-    Conf_C_Eng,
-    departmental_affiliation == "Computer Science" |
-      departmental_affiliation == "Engineering"
-  )
-Conf_C_Eng$departmental_affiliation <- NULL
+<!--   if (Corelation_DF_Conf$CR[i]=="C"){ -->
+<!--     Corelation_DF_Conf$CR[i]=1 -->
+<!--   } else if (Corelation_DF_Conf$CR[i]=="B"){ -->
+<!--     Corelation_DF_Conf$CR[i]=2 -->
+<!--   }  else if (Corelation_DF_Conf$CR[i]=="A"){ -->
+<!--     Corelation_DF_Conf$CR[i]=3 -->
+<!--   } else { -->
+<!--     Corelation_DF_Conf$CR[i]=3 -->
+<!--   } -->
+
+<!--   if (Corelation_DF_Conf$SR[i]=="< 10%"){ -->
+<!--     Corelation_DF_Conf$SR[i]=0 -->
+<!--   } else if (Corelation_DF_Conf$SR[i]=="10-20%"){ -->
+<!--     Corelation_DF_Conf$SR[i]=0 -->
+<!--   } else if (Corelation_DF_Conf$SR[i]=="20-30%"){ -->
+<!--     Corelation_DF_Conf$SR[i]=0 -->
+<!--   } else if (Corelation_DF_Conf$SR[i]=="30-50%"){ -->
+<!--     Corelation_DF_Conf$SR[i]=0 -->
+<!--   } else if (Corelation_DF_Conf$SR[i]=="50-75%"){ -->
+<!--     Corelation_DF_Conf$SR[i]=1 -->
+<!--   } else if (Corelation_DF_Conf$SR[i]=="75-90%"){ -->
+<!--     Corelation_DF_Conf$SR[i]=1 -->
+<!--   } else{ -->
+<!--     Corelation_DF_Conf$SR[i]=1 -->
+<!--   } -->
+
+<!--   if (Corelation_DF_Conf$ACP[i]=="< 1 week"){ -->
+<!--     Corelation_DF_Conf$ACP[i]=1 -->
+<!--   } else if (Corelation_DF_Conf$ACP[i]=="1-2 weeks"){ -->
+<!--     Corelation_DF_Conf$ACP[i]=1 -->
+<!--   } else if (Corelation_DF_Conf$ACP[i]=="2-4 weeks"){ -->
+<!--     Corelation_DF_Conf$ACP[i]=1 -->
+<!--   } else if (Corelation_DF_Conf$ACP[i]=="1-2 months"){ -->
+<!--     Corelation_DF_Conf$ACP[i]=2 -->
+<!--   } else { -->
+<!--     Corelation_DF_Conf$ACP[i]=3 -->
+<!--   } -->
+
+<!--   if (Corelation_DF_Conf$AR[i]=="< 1 month"){ -->
+<!--     Corelation_DF_Conf$AR[i]=1 -->
+<!--   } else if(Corelation_DF_Conf$AR[i]=="1-3 months"){ -->
+<!--     Corelation_DF_Conf$AR[i]=1 -->
+<!--   } else if(Corelation_DF_Conf$AR[i]=="3-6 months"){ -->
+<!--     Corelation_DF_Conf$AR[i]=1 -->
+<!--   } else if(Corelation_DF_Conf$AR[i]=="6-12 months"){ -->
+<!--     Corelation_DF_Conf$AR[i]=2 -->
+<!--   } else if(Corelation_DF_Conf$AR[i]==""){ -->
+<!--     Corelation_DF_Conf$AR[i]=NA -->
+<!--   } else { -->
+<!--     Corelation_DF_Conf$AR[i]=3 -->
+<!--   } -->
 
 
-M_Conf_c_eng <- cor(Conf_C_Eng[, c(2:26)], use = "complete.obs")
-res3 <- cor.mtest(Conf_C_Eng[, c(2:26)], conf.level = .95)
-
-# significance_plot<-
-
-# par(mfrow = c(2, 2))
-corrplot(
-  M_Conf_c_eng,
-  p.mat = res3$p,
-  method = "color",
-  type = "upper",
-  title = "Psychometrics-core questions correlation on conference papers Com-Eng",
-  sig.level = c(.001, .01, .05),
-  pch.cex = .9,
-  diag = FALSE,
-  insig = "label_sig",
-  pch.col = "black",
-  col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200),
-  tl.col = "black",
-  mar = c(0, 0, 1, 0)
-)
-```
-
-```{r, echo=FALSE}
-Conf_A_Astar$departmental_affiliation <- NULL
-Conf_A_Astar <- subset(Conf_A_Astar, CR == "3" | CR == "4")
-
-M_Conf_A_Astar <- cor(Conf_A_Astar[, c(2:26)], use = "complete.obs")
-res4 <- cor.mtest(Conf_A_Astar[, c(2:26)], conf.level = .95)
-
-corrplot(
-  M_Conf_A_Astar,
-  p.mat = res4$p,
-  method = "color",
-  type = "upper",
-  title = "Psychometrics-core questions correlation on A-A* conference papers",
-  sig.level = c(.001, .01, .05),
-  pch.cex = .9,
-  diag = FALSE,
-  insig = "label_sig",
-  pch.col = "black",
-  col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200),
-  tl.col = "black",
-  mar = c(0, 0, 1, 0)
-)
-# dev.off()
-```
+<!--   if (Corelation_DF_Conf$DWH[i]=="Significantly less"){ -->
+<!--     Corelation_DF_Conf$DWH[i]=1 -->
+<!--   } else if (Corelation_DF_Conf$DWH[i]=="Less"){ -->
+<!--     Corelation_DF_Conf$DWH[i]=1 -->
+<!--   } else if (Corelation_DF_Conf$DWH[i]=="About the same"){ -->
+<!--     Corelation_DF_Conf$DWH[i]=1 -->
+<!--   } else if (Corelation_DF_Conf$DWH[i]=="More"){ -->
+<!--     Corelation_DF_Conf$DWH[i]=2 -->
+<!--   } else if (Corelation_DF_Conf$DWH[i]==""){ -->
+<!--     Corelation_DF_Conf$DWH[i]=NA -->
+<!--   } else { -->
+<!--     Corelation_DF_Conf$DWH[i]=3 -->
+<!--   } -->
 
 
-```{r, echo=FALSE}
-Conf_B_C$departmental_affiliation <- NULL
-Conf_B_C <- subset(Conf_B_C, CR == "1" | CR == "2")
-
-M_Conf_B_C <- cor(Conf_B_C[, c(2:26)], use = "complete.obs")
-res5 <- cor.mtest(Conf_B_C[, c(2:26)], conf.level = .95)
-
-# significance_plot<-
-# pdf(file = "corplot.pdf")
-corrplot(
-  M_Conf_B_C,
-  p.mat = res5$p,
-  method = "color",
-  type = "upper",
-  title = "Psychometrics-core questions correlation on B-C conference papers",
-  sig.level = c(.001, .01, .05),
-  pch.cex = .9,
-  diag = FALSE,
-  insig = "label_sig",
-  pch.col = "black",
-  col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200),
-  tl.col = "black",
-  mar = c(0, 0, 1, 0)
-)
-# dev.off()
-```
+<!--   if (Corelation_DF_Conf$T[i]=="Minutes before deadline"){ -->
+<!--     Corelation_DF_Conf$T[i]= 1 -->
+<!--   } else if (Corelation_DF_Conf$T[i]=="1-3 hours before deadline"){ -->
+<!--     Corelation_DF_Conf$T[i]=2 -->
+<!--   } else if (Corelation_DF_Conf$T[i]=="3-6 hours before deadline"){ -->
+<!--     Corelation_DF_Conf$T[i]=3 -->
+<!--   } else if (Corelation_DF_Conf$T[i]=="1 day before deadline"){ -->
+<!--     Corelation_DF_Conf$T[i]=4 -->
+<!--   } else if (Corelation_DF_Conf$T[i]==""){ -->
+<!--     Corelation_DF_Conf$T[i]=NA -->
+<!--   } else { -->
+<!--     Corelation_DF_Conf$T[i]=5 -->
+<!--   } -->
 
 
-```{r, echo=FALSE}
-
-par(mfrow = c(2, 2))
-
-corrplot(
-  M_proposal,
-  p.mat = res1$p,
-  method = "color",
-  type = "upper",
-  title = "Proposals",
-  sig.level = c(.001, .01, .05),
-  pch.cex = .9,
-  diag = FALSE,
-  insig = "label_sig",
-  pch.col = "black",
-  col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200),
-  tl.col = "black",
-  mar = c(0, 0, 1, 0)
-)
-corrplot(
-  M_Conf,
-  p.mat = res2$p,
-  method = "color",
-  type = "upper",
-  title = "Conference papers",
-  sig.level = c(.001, .01, .05),
-  pch.cex = .9,
-  diag = FALSE,
-  insig = "label_sig",
-  pch.col = "black",
-  col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200),
-  tl.col = "black",
-  mar = c(0, 0, 1, 0)
-)
-corrplot(
-  M_Conf_A_Astar,
-  p.mat = res4$p,
-  method = "color",
-  type = "upper",
-  title = "A-A* conference papers",
-  sig.level = c(.001, .01, .05),
-  pch.cex = .9,
-  diag = FALSE,
-  insig = "label_sig",
-  pch.col = "black",
-  col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200),
-  tl.col = "black",
-  mar = c(0, 0, 1, 0)
-)
-corrplot(
-  M_Conf_B_C,
-  p.mat = res5$p,
-  method = "color",
-  type = "upper",
-  title = "B-C conference papers",
-  sig.level = c(.001, .01, .05),
-  pch.cex = .9,
-  diag = FALSE,
-  insig = "label_sig",
-  pch.col = "black",
-  col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200),
-  tl.col = "black",
-  mar = c(0, 0, 1, 0)
-)
-
-```
+<!--   if (Corelation_DF_Conf$DS[i]=="Extremely less"){ -->
+<!--     Corelation_DF_Conf$DS[i]=1 -->
+<!--   } else if (Corelation_DF_Conf$DS[i]=="Significantly less"){ -->
+<!--     Corelation_DF_Conf$DS[i]=1 -->
+<!--   } else if (Corelation_DF_Conf$DS[i]=="Same"){ -->
+<!--     Corelation_DF_Conf$DS[i]=1 -->
+<!--   } else if (Corelation_DF_Conf$DS[i]=="Significantly  more"){ -->
+<!--     Corelation_DF_Conf$DS[i]=2 -->
+<!--   } else if (Corelation_DF_Conf$DS[i]=="Extremely  more"){ -->
+<!--     Corelation_DF_Conf$DS[i]=3 -->
+<!--   } else { -->
+<!--     Corelation_DF_Conf$DS[i]=NA -->
+<!--   } -->
+<!-- } -->
 
 
-```{r, echo=FALSE}
+<!-- # colnames(Corelation_DF_Conf) -->
 
-par(mfrow = c(2, 1))
-corrplot(
-  M_Conf,
-  p.mat = res2$p,
-  method = "color",
-  type = "upper",
-  title = "Psychometrics-core questions correlation on conference papers",
-  sig.level = c(.001, .01, .05),
-  pch.cex = .9,
-  diag = FALSE,
-  insig = "label_sig",
-  pch.col = "black",
-  col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200),
-  tl.col = "black",
-  mar = c(0, 0, 1, 0)
-)
-corrplot(
-  M_Conf_c_eng,
-  p.mat = res3$p,
-  method = "color",
-  type = "upper",
-  title = "Psychometrics-core questions correlation on conference papers Com-Eng",
-  sig.level = c(.001, .01, .05),
-  pch.cex = .9,
-  diag = FALSE,
-  insig = "label_sig",
-  pch.col = "black",
-  col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200),
-  tl.col = "black",
-  mar = c(0, 0, 1, 0)
-)
-```
+<!-- cols.num <- c("NCP", "CR", "SR", "ACP", "AR", "DWH", "DWR", "DDR", "T", "DS") -->
+<!-- Corelation_DF_Conf[cols.num] <- sapply(Corelation_DF_Conf[cols.num],as.numeric) -->
+
+<!-- Conf_C_Eng<-Corelation_DF_Conf -->
+<!-- Conf_A_Astar<-Corelation_DF_Conf -->
+<!-- Conf_B_C<-Corelation_DF_Conf -->
+
+<!-- Corelation_DF_Conf$departmental_affiliation<-NULL -->
+<!-- ``` -->
+
+<!-- ```{r, echo=FALSE} -->
+<!-- file_name = 'CorrelationData_conf_SR2.csv' -->
+<!-- write.csv(Corelation_DF_Conf, -->
+<!--           file.path(curated_data_dir, file_name), -->
+<!--           row.names = FALSE) -->
+<!-- ``` -->
+
+
+<!-- ```{r,echo=FALSE} -->
+<!-- #  -->
+<!-- # # Defines function to color according to correlation -->
+<!-- # cor_func <- function(data, mapping, method, symbol, ...) { -->
+<!-- #   x <- eval_data_col(data, mapping$x) -->
+<!-- #   y <- eval_data_col(data, mapping$y) -->
+<!-- #   corr <- cor(x, y, method = method, use = 'complete.obs') -->
+<!-- #   colFn <- colorRampPalette(c("brown1", "white", "dodgerblue"), -->
+<!-- #                             interpolate = 'spline') -->
+<!-- #   fill <- colFn(100)[findInterval(corr, seq(-1, 1, length = 100))] -->
+<!-- #    -->
+<!-- #   ggally_text( -->
+<!-- #     label = paste(symbol, as.character(round(corr, 2))), -->
+<!-- #     mapping = aes(), -->
+<!-- #     xP = 0.5, -->
+<!-- #     yP = 0.5, -->
+<!-- #     color = 'black', -->
+<!-- #     size = 2.75, -->
+<!-- #     ... -->
+<!-- #   ) + -->
+<!-- #     theme(panel.background = element_rect(fill = fill)) -->
+<!-- # } -->
+<!-- #  -->
+<!-- # pm <- ggpairs( -->
+<!-- #   Corelation_DF_Conf, -->
+<!-- #   upper = list(continuous = wrap( -->
+<!-- #     cor_func, -->
+<!-- #     # method = 'spearman', symbol = expression('\u03C1 ='))), -->
+<!-- #     method = 'spearman', symbol = expression('') -->
+<!-- #   )), -->
+<!-- #    -->
+<!-- #   lower = list( -->
+<!-- #     continuous = function(data, mapping, ...) { -->
+<!-- #       ggally_smooth_lm(data = data, mapping = mapping) + -->
+<!-- #         theme(panel.background = element_blank()) -->
+<!-- #     } -->
+<!-- #   ), -->
+<!-- #   diag = list( -->
+<!-- #     continuous = function(data, mapping, ...) { -->
+<!-- #       ggally_densityDiag(data = data, mapping = mapping) + -->
+<!-- #         theme(panel.background = element_blank()) -->
+<!-- #     } -->
+<!-- #   ) -->
+<!-- # ) -->
+<!-- #  -->
+<!-- # mytheme = theme( -->
+<!-- #   strip.background = element_rect(fill = "white"), -->
+<!-- #   panel.grid.major = element_blank(), -->
+<!-- #   panel.grid.minor = element_blank() -->
+<!-- # ) -->
+<!-- #  -->
+<!-- #  -->
+<!-- # Cor_plot<-pm + mytheme -->
+<!-- #  -->
+<!-- #       filename<-"Conf_Corelation.pdf" -->
+<!-- #       full_path<-file.path(plot_dir, filename) -->
+<!-- #       ggsave(full_path, Cor_plot, width = 11, height = 11, units = "in") -->
+<!-- ``` -->
+
+
+
+<!-- ```{r,echo=FALSE} -->
+<!-- library(corrplot) -->
+<!-- M_Conf <- cor(Corelation_DF_Conf[, c(2:26)], use = "complete.obs") -->
+<!-- res2 <- cor.mtest(Corelation_DF_Conf[, c(2:26)], conf.level = .95) -->
+
+<!-- corrplot( -->
+<!--   M_Conf, -->
+<!--   p.mat = res2$p, -->
+<!--   method = "color", -->
+<!--   type = "upper", -->
+<!--   # title = "Psychometrics-core questions correlation on conference papers", -->
+<!--   title = "Psychometrics-core questions correlation on conference papers", -->
+<!--   sig.level = c(.001, .01, .05), -->
+<!--   pch.cex = .9, -->
+<!--   diag = FALSE, -->
+<!--   insig = "label_sig", -->
+<!--   pch.col = "black", -->
+<!--   col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200), -->
+<!--   tl.col = "black", -->
+<!--   mar = c(0, 0, 1, 0) -->
+<!-- ) -->
+
+<!-- ``` -->
+
+
+<!-- ```{r, echo=FALSE} -->
+<!-- Conf_C_Eng <- -->
+<!--   subset( -->
+<!--     Conf_C_Eng, -->
+<!--     departmental_affiliation == "Computer Science" | -->
+<!--       departmental_affiliation == "Engineering" -->
+<!--   ) -->
+<!-- Conf_C_Eng$departmental_affiliation <- NULL -->
+
+
+<!-- M_Conf_c_eng <- cor(Conf_C_Eng[, c(2:26)], use = "complete.obs") -->
+<!-- res3 <- cor.mtest(Conf_C_Eng[, c(2:26)], conf.level = .95) -->
+
+<!-- # significance_plot<- -->
+
+<!-- # par(mfrow = c(2, 2)) -->
+<!-- corrplot( -->
+<!--   M_Conf_c_eng, -->
+<!--   p.mat = res3$p, -->
+<!--   method = "color", -->
+<!--   type = "upper", -->
+<!--   title = "Psychometrics-core questions correlation on conference papers Com-Eng", -->
+<!--   sig.level = c(.001, .01, .05), -->
+<!--   pch.cex = .9, -->
+<!--   diag = FALSE, -->
+<!--   insig = "label_sig", -->
+<!--   pch.col = "black", -->
+<!--   col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200), -->
+<!--   tl.col = "black", -->
+<!--   mar = c(0, 0, 1, 0) -->
+<!-- ) -->
+<!-- ``` -->
+
+<!-- ```{r, echo=FALSE} -->
+<!-- Conf_A_Astar$departmental_affiliation <- NULL -->
+<!-- Conf_A_Astar <- subset(Conf_A_Astar, CR == "3" | CR == "4") -->
+
+<!-- M_Conf_A_Astar <- cor(Conf_A_Astar[, c(2:26)], use = "complete.obs") -->
+<!-- res4 <- cor.mtest(Conf_A_Astar[, c(2:26)], conf.level = .95) -->
+
+<!-- corrplot( -->
+<!--   M_Conf_A_Astar, -->
+<!--   p.mat = res4$p, -->
+<!--   method = "color", -->
+<!--   type = "upper", -->
+<!--   title = "Psychometrics-core questions correlation on A-A* conference papers", -->
+<!--   sig.level = c(.001, .01, .05), -->
+<!--   pch.cex = .9, -->
+<!--   diag = FALSE, -->
+<!--   insig = "label_sig", -->
+<!--   pch.col = "black", -->
+<!--   col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200), -->
+<!--   tl.col = "black", -->
+<!--   mar = c(0, 0, 1, 0) -->
+<!-- ) -->
+<!-- # dev.off() -->
+<!-- ``` -->
+
+
+<!-- ```{r, echo=FALSE} -->
+<!-- Conf_B_C$departmental_affiliation <- NULL -->
+<!-- Conf_B_C <- subset(Conf_B_C, CR == "1" | CR == "2") -->
+
+<!-- M_Conf_B_C <- cor(Conf_B_C[, c(2:26)], use = "complete.obs") -->
+<!-- res5 <- cor.mtest(Conf_B_C[, c(2:26)], conf.level = .95) -->
+
+<!-- # significance_plot<- -->
+<!-- # pdf(file = "corplot.pdf") -->
+<!-- corrplot( -->
+<!--   M_Conf_B_C, -->
+<!--   p.mat = res5$p, -->
+<!--   method = "color", -->
+<!--   type = "upper", -->
+<!--   title = "Psychometrics-core questions correlation on B-C conference papers", -->
+<!--   sig.level = c(.001, .01, .05), -->
+<!--   pch.cex = .9, -->
+<!--   diag = FALSE, -->
+<!--   insig = "label_sig", -->
+<!--   pch.col = "black", -->
+<!--   col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200), -->
+<!--   tl.col = "black", -->
+<!--   mar = c(0, 0, 1, 0) -->
+<!-- ) -->
+<!-- # dev.off() -->
+<!-- ``` -->
+
+
+<!-- ```{r, echo=FALSE} -->
+
+<!-- par(mfrow = c(2, 2)) -->
+
+<!-- corrplot( -->
+<!--   M_proposal, -->
+<!--   p.mat = res1$p, -->
+<!--   method = "color", -->
+<!--   type = "upper", -->
+<!--   title = "Proposals", -->
+<!--   sig.level = c(.001, .01, .05), -->
+<!--   pch.cex = .9, -->
+<!--   diag = FALSE, -->
+<!--   insig = "label_sig", -->
+<!--   pch.col = "black", -->
+<!--   col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200), -->
+<!--   tl.col = "black", -->
+<!--   mar = c(0, 0, 1, 0) -->
+<!-- ) -->
+<!-- corrplot( -->
+<!--   M_Conf, -->
+<!--   p.mat = res2$p, -->
+<!--   method = "color", -->
+<!--   type = "upper", -->
+<!--   title = "Conference papers", -->
+<!--   sig.level = c(.001, .01, .05), -->
+<!--   pch.cex = .9, -->
+<!--   diag = FALSE, -->
+<!--   insig = "label_sig", -->
+<!--   pch.col = "black", -->
+<!--   col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200), -->
+<!--   tl.col = "black", -->
+<!--   mar = c(0, 0, 1, 0) -->
+<!-- ) -->
+<!-- corrplot( -->
+<!--   M_Conf_A_Astar, -->
+<!--   p.mat = res4$p, -->
+<!--   method = "color", -->
+<!--   type = "upper", -->
+<!--   title = "A-A* conference papers", -->
+<!--   sig.level = c(.001, .01, .05), -->
+<!--   pch.cex = .9, -->
+<!--   diag = FALSE, -->
+<!--   insig = "label_sig", -->
+<!--   pch.col = "black", -->
+<!--   col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200), -->
+<!--   tl.col = "black", -->
+<!--   mar = c(0, 0, 1, 0) -->
+<!-- ) -->
+<!-- corrplot( -->
+<!--   M_Conf_B_C, -->
+<!--   p.mat = res5$p, -->
+<!--   method = "color", -->
+<!--   type = "upper", -->
+<!--   title = "B-C conference papers", -->
+<!--   sig.level = c(.001, .01, .05), -->
+<!--   pch.cex = .9, -->
+<!--   diag = FALSE, -->
+<!--   insig = "label_sig", -->
+<!--   pch.col = "black", -->
+<!--   col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200), -->
+<!--   tl.col = "black", -->
+<!--   mar = c(0, 0, 1, 0) -->
+<!-- ) -->
+
+<!-- ``` -->
+
+
+<!-- ```{r, echo=FALSE} -->
+
+<!-- par(mfrow = c(2, 1)) -->
+<!-- corrplot( -->
+<!--   M_Conf, -->
+<!--   p.mat = res2$p, -->
+<!--   method = "color", -->
+<!--   type = "upper", -->
+<!--   title = "Psychometrics-core questions correlation on conference papers", -->
+<!--   sig.level = c(.001, .01, .05), -->
+<!--   pch.cex = .9, -->
+<!--   diag = FALSE, -->
+<!--   insig = "label_sig", -->
+<!--   pch.col = "black", -->
+<!--   col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200), -->
+<!--   tl.col = "black", -->
+<!--   mar = c(0, 0, 1, 0) -->
+<!-- ) -->
+<!-- corrplot( -->
+<!--   M_Conf_c_eng, -->
+<!--   p.mat = res3$p, -->
+<!--   method = "color", -->
+<!--   type = "upper", -->
+<!--   title = "Psychometrics-core questions correlation on conference papers Com-Eng", -->
+<!--   sig.level = c(.001, .01, .05), -->
+<!--   pch.cex = .9, -->
+<!--   diag = FALSE, -->
+<!--   insig = "label_sig", -->
+<!--   pch.col = "black", -->
+<!--   col = colorRampPalette(c("brown1", "white", "dodgerblue"))(200), -->
+<!--   tl.col = "black", -->
+<!--   mar = c(0, 0, 1, 0) -->
+<!-- ) -->
+<!-- ``` -->
 
